--- a/temp_analysis_1.ipynb
+++ b/temp_analysis_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,40 +19,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>date</th>\n",
+       "      <th>prcp</th>\n",
+       "      <th>tobs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-03</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       station        date  prcp  tobs\n",
+       "0  USC00519397  2010-01-01  0.08    65\n",
+       "1  USC00519397  2010-01-02  0.00    63\n",
+       "2  USC00519397  2010-01-03  0.00    74\n",
+       "3  USC00519397  2010-01-04  0.00    76\n",
+       "4  USC00519397  2010-01-06   NaN    73"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# \"tobs\" is \"temperature observations\"\n",
-    "df = pd.read_csv('hawaii_measurements.csv')\n",
+    "df = pd.read_csv('Resources/hawaii_measurements.csv')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# Convert the date column format from string to datetime"
+    "# Convert the date column format from string to datetime\n",
+    "df['datetime'] = pd.to_datetime(df['date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the date column as the DataFrame index"
+    "# Set the date column as the DataFrame index\n",
+    "df = df.set_index('datetime')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop the date column"
+    "# Drop the date column\n",
+    "df = df.drop(columns=['date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>prcp</th>\n",
+       "      <th>tobs</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2010-01-01</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-02</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-03</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-04</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-06</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                station  prcp  tobs\n",
+       "datetime                           \n",
+       "2010-01-01  USC00519397  0.08    65\n",
+       "2010-01-02  USC00519397  0.00    63\n",
+       "2010-01-03  USC00519397  0.00    74\n",
+       "2010-01-04  USC00519397  0.00    76\n",
+       "2010-01-06  USC00519397   NaN    73"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -64,56 +241,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy import stats"
+    "#Identify the average temperature in June at all stations across all available years in the dataset. \n",
+    "#Do the same for the temperature in December.\n",
+    "from scipy import stats\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Filter data for desired months"
+    "# Filter data for desired months\n",
+    "june = df.loc[df.index.month == 6,:]\n",
+    "december = df.loc[df.index.month == 12,:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.94411764705882"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Identify the average temperature for June"
+    "# Identify the average temperature for June\n",
+    "avg_june = june['tobs'].mean()\n",
+    "avg_june"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "71.04152933421226"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Identify the average temperature for December"
+    "# Identify the average temperature for December\n",
+    "avg_dec = december['tobs'].mean()\n",
+    "avg_dec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create collections of temperature data"
+    "# Create collections of temperature data\n",
+    "jun = june['tobs']\n",
+    "dec = december['tobs']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The p-value is 3.9025129038616655e-191, which makes the difference between the two means statistically significant\n"
+     ]
+    }
+   ],
    "source": [
-    "# Run paired t-test"
+    "# Run t-test\n",
+    "s, p = stats.ttest_ind(jun,dec)\n",
+    "print(f'The p-value is {p}, which makes the difference between the two means statistically significant')"
    ]
   },
   {
@@ -121,6 +340,13 @@
    "metadata": {},
    "source": [
     "### Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As the temperatures in June and December are independent samples, I chose to run an unpaired t-test. The resulting p-value was less than 0.05, rejecting the null hypothesis that the means of the two groups are the same. So it is fair to move forward with the assumption that there is a statistically significant difference in the average temperatures in June and December in Hawai'i."
    ]
   },
   {
@@ -133,7 +359,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -147,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
